# tochka-sdk

./: .env  .env.example  .gitignore  Cargo.toml  README.md
examples/: account_balances.rs  accounts.rs  customers.rs  get_operation.rs  operations.rs  payment_capture_refund.rs  payment_registry.rs  simple.rs  statements.rs  webhooks.rs
scripts/: generate_types.py
src/: client.rs  error.rs  jwt.rs  lib.rs
src/helpers/: mod.rs
src/methods/: account_balance.rs  accounts.rs  acquiring.rs  customers.rs  mod.rs  open_banking.rs  payment_links.rs  payments.rs  statements.rs  webhooks.rs
src/types/: account.rs  acquiring.rs  auth.rs  balance.rs  consent.rs  contractor.rs  customer.rs  entities.rs  external.rs  mod.rs  payment.rs  receipt.rs  refund.rs  registry.rs  retailer.rs  service.rs  statements.rs  tax.rs  transactions.rs  version.rs  webhooks.rs
tests/: accounts.rs  balance.rs  operations.rs  payment_links.rs  statements.rs  webhooks.rs
tests/balance/: account_balance.rs
