[package]
name = "tochka_sdk"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for Tochka Bank OpenAPI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ogonek-Education/tochka-rust-sdk"

[lib]
name = "tochka_sdk"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
lazy_static = "1.5.0"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
